Adding images and test html changes

--- a/tools/donorbox-overlay/test.html
+++ b/tools/donorbox-overlay/test.html
@@ -38,10 +38,10 @@
                 }
         </style>
 </head>
-<body>
+<body style="background-image: url('images/rainbow_fireworks.gif');">
         <div class="main">
-                <h1>Donorbox progress:</h1>
-                <p>
+                <h1 style="background-image: url('images/red_fireworks.gif');">Donorbox progress:</h1>
+                <p style="background-image: url('images/confetti.gif');">
                         Number of contributors: 2<BR>
                         Total raised: $10.02<BR>
                         Raise goal: $500
@@ -50,5 +50,6 @@
         <div class="rainbow-text">
                 WE HAVE A NEW DONATION!!
         </div>
+        <img src="images/rainbow-sparkle-fireworks.gif" alt="fireworks gif" />
 </body>
 </html>
